Update Swagger annotations: /api/v1 -> /v1
